--- a/src/scss/components/_sort.scss
+++ b/src/scss/components/_sort.scss
@@ -2,12 +2,20 @@
 
 .sort {
   position: relative;
+
   &__label {
     display: flex;
     align-items: center;
 
     svg {
       margin-right: 8px;
+      transform: rotate(180deg);
+      transition: 0.3s ease-in-out;
+
+      &.rotated {
+        transform: rotate(0deg);
+        transition: 0.3s ease-in-out;
+      }
     }
 
     b {
@@ -34,6 +42,7 @@
 
     ul {
       overflow: hidden;
+
       li {
         padding: 12px 20px;
         cursor: pointer;
